--- a/_config.yml
+++ b/_config.yml
@@ -100,17 +100,7 @@ content:
         quote: >
           Customer relationship management app that can help you manage your sales and customers
         description: | # this will include new lines to allow paragraphs
-          it has many featues like :
-            - individualize customers for each salesman
-            - each salesman can add new customer  
-            - each salesman only access  his/her customers
-            - Create Quote 
-            - Follow up sales
-            - Send quote as Email to your customer 
-            - save email history
-            - Export Quotes as PDF
-            - API for see each salesman customers (use JWT Authentication)
-            - individualize each salesman profile  and sale history (not added yet)
+          developed using Django an it has many featues like that you can see in the project repo.
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
