--- a/_config.yml
+++ b/_config.yml
@@ -136,9 +136,9 @@ content:
     layout: list
     content:
       - layout: right
-        title: Trade Bot 
+        title: Treasurypto 
         sub_title: Developer
-        caption: September 2022 - March 2022)
+        caption: September 2021 - March 2022
         link: Link to company (optional)
         quote: >
           watch the candles ,get signal ,trade 
